chroe(update): update storefront-components to .89

--- a/src/html/CartQuickview.html
+++ b/src/html/CartQuickview.html
@@ -79,12 +79,12 @@
         >
           <div class="minicart__summary">
             <span>{{ i19subtotal }}</span>
-            <strong class="minicart__subtotal">
+            <div class="minicart__subtotal">
               <a-prices
                 :product="{ price: cart.subtotal }"
                 :is-literal="true"
               />
-            </strong>
+            </div>
           </div>
 
           <a-link
