--- a/src/html/TheProduct.html
+++ b/src/html/TheProduct.html
@@ -90,7 +90,7 @@
             <slot name="prices">
               <p class="product__prices">
                 <a-prices
-                  :product="{ ...body, ...selectedVariation, ...finalPrices }"
+                  :product="ghostProductForPrices"
                   :is-literal="true"
                   :is-big="true"
                   @fix-price="price => fixedPrice = price"
